kube/prod/prod-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: fourfridays
spec:
  replicas: 2
  selector:
    matchLabels:
      app: fourfridays
  template:
    metadata:
      labels:
        app: fourfridays
    spec:
      containers:
        - image: ghcr.io/fourfridays/fourfridays.com:latest
          name: fourfridays
          resources:
            requests:
              ephemeral-storage: "2Gi"
              memory: "256Mi"
            limits:
              ephemeral-storage: "4Gi"
              memory: "256Mi"
          ports:
            - containerPort: 8000
---
apiVersion: v1
kind: Service
metadata:
  name: fourfridays
  labels:
    app: fourfridays
spec:
  selector:
    app: fourfridays
  ports:
    - port: 8088
      targetPort: 8000
  type: ClusterIP
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: fourfridays
  annotations:
    kubernetes.io/ingress.class: traefik
    traefik.ingress.kubernetes.io/router.entrypoints: web
spec:
  rules:
    - host: fourfridays.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: fourfridays
                port:
                  number: 8088
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: fourfridays-tls
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`fourfridays.com`)
      middlewares:
        - name: fourfridays-gzip-compress
      services:
        - name: fourfridays
          port: 8088
  tls: # This route uses TLS
    certResolver: le # Uses our certificate resolver to get a certificate automatically!
---
# Enable gzip compression
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: fourfridays-gzip-compress
spec:
  compress: {}
